<resources>
    <string name="shr_app_name">RoqRide</string>
    <string name="shr_hint_username">Username</string>
    <string name="shr_hint_password">Password</string>
    <string name="shr_button_next">Iniciar Sesion</string>
    <string name="shr_button_regus">Registrar Usuario</string>
    <string name="shr_button_regch">Regitrar Chofer</string>
    <string name="shr_error_password">Contraseña invalida
        .</string>
    <string name="shr_filter_title">Filter</string>
    <string name="shr_search_title">Search</string>
    <string name="shr_product_title">Lugar</string>
    <string name="shr_product_description">Nombre del Chofer</string>
    <string name="tercertexto">Hora salida</string>




    <!-- Shrine backdrop menu labels -->
    <string name="shr_featured_label">Featured</string>
    <string name="shr_apartment_label">Apartment</string>
    <string name="shr_accessories_label">Accessories</string>
    <string name="shr_shoes_label">Shoes</string>
    <string name="shr_tops_label">Tops</string>
    <string name="shr_bottoms_label">Bottoms</string>
    <string name="shr_dresses_label">Dresses</string>
    <string name="shr_account_label">My Account</string>
    <string name="shr_logo_content_description">Shrine Logo</string>
</resources>
